--- a/libumwsu/tests/Makefile.am
+++ b/libumwsu/tests/Makefile.am
@@ -5,10 +5,13 @@ check_PROGRAMS=testfind1 testumwsu1
 #testmodule1_SOURCES=testmodule1.c
 
 modulesdir=$(pkglibdir)/modules
-modules_LTLIBRARIES=module1.la
+modules_LTLIBRARIES=module1.la module2.la
 
 module1_la_SOURCES=module1.c
 module1_la_LDFLAGS= -module -avoid-version
+
+module2_la_SOURCES=module2.c
+module2_la_LDFLAGS= -module -avoid-version
 
 testfind1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
 testfind1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ -lmagic
