--- a/libumwsu/src/Makefile.am
+++ b/libumwsu/src/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES=libumwsu.la
 
-libumwsu_la_SOURCES=module.c dir.c dir.h umwsu.c
+libumwsu_la_SOURCES=module.c modulep.h dir.c dir.h umwsu.c
 
 AM_CPPFLAGS= -DLIBUMWSU_MODULES_PATH='"$(pkglibdir)/modules"'
 libumwsu_la_CFLAGS= -I$(top_srcdir)/include
