* modified messages * added documentation

--- a/libumwsu/Makefile.am
+++ b/libumwsu/Makefile.am
@@ -1,3 +1,6 @@
-SUBDIRS=include src tests pkgconfig tools
+if COND_DOC
+OPT_DOC_DIR=doc
+endif
 
+SUBDIRS=include src tests pkgconfig tools $(OPT_DOC_DIR)
 
