--- a/libumwsu/doc/man/fr/Makefile.am
+++ b/libumwsu/doc/man/fr/Makefile.am
@@ -1,7 +1,7 @@
 doc_DATA= libumwsu.3 umwscan.1 libumwsu.3.html umwscan.1.html
 
 ASCIIDOCFLAGS=-a data-uri -a icons -b html5
-A2XFLAGS=--doctype manpage --format manpage -v -v -k
+A2XFLAGS=--doctype manpage --format manpage -v -v 
 
 %: $(srcdir)/%.txt
 	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/doc/man/fr $(srcdir)/$*.txt
