--- a/umwsu-modules/clamav/src/Makefile.am
+++ b/umwsu-modules/clamav/src/Makefile.am
@@ -11,3 +11,8 @@ clamav_la_LIBADD+= @LIBUMWSU_LIBS@
 clamav_la_CFLAGS+= @LIBCLAMAV_CFLAGS@
 clamav_la_LIBADD+= @LIBCLAMAV_LIBS@
 
+install-exec-hook:
+	-rm -f "$(DESTDIR)$(modulesdir)"/clamav.la "$(DESTDIR)$(modulesdir)"/clamav.a
+
+install-data-hook:
+	-rm -f "$(DESTDIR)$(modulesdir)"/clamav.la "$(DESTDIR)$(modulesdir)"/clamav.a
