* changed alert reporting URL for HTTPS, added necessary libcurl options

--- a/libumwsu/configure.ac
+++ b/libumwsu/configure.ac
@@ -61,6 +61,7 @@ Makefile
 doc/Makefile
 doc/man/Makefile
 doc/man/fr/Makefile
+doc/talk/Makefile
 include/Makefile
 include/libumwsu/Makefile
 pkgconfig/Makefile
