* added systray to IHM * reorganized sources; moved origin UI to legacy/

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-build-uhuru-Desktop-Debug/
-build-uhuru-Desktop-Dist/
-build-uhuruScheduler-Desktop-Dist/
-build-uhuruWeb-Desktop-Dist/
+build-uhuru-*-Debug/
