* added summary print and better option parsing to uhuru-scan CLI

--- a/libumwsu/tests/Makefile.am
+++ b/libumwsu/tests/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS=conf
+
 check_PROGRAMS=testfind1 testumwsu1 testumwsuscan1 testxmlreport1
 
 testfind1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
