ajout fichiers conf

--- a/libumwsu/Makefile.am
+++ b/libumwsu/Makefile.am
@@ -2,7 +2,7 @@ if COND_DOC
 OPT_DOC_DIR=doc
 endif
 
-SUBDIRS=include src tests pkgconfig tools $(OPT_DOC_DIR)
+SUBDIRS=conf include src tests pkgconfig tools $(OPT_DOC_DIR)
 
 TAGDIRS=\
 $(top_srcdir)/doc \
