--- a/libumwsu/conf/Makefile.am
+++ b/libumwsu/conf/Makefile.am
@@ -1,4 +1,4 @@
-umwsuconfdir=$(sysconfdir)/umwsu
-umwsuconf_DATA=umwsu.conf
+umwsuconfdir=$(sysconfdir)/umwsu/conf.d
+umwsuconf_DATA=umwsu.conf alert.conf
 
-EXTRA_DIST=umwsu.conf
+EXTRA_DIST=umwsu.conf alert.conf
