--- a/libumwsu/src/daemon/Makefile.am
+++ b/libumwsu/src/daemon/Makefile.am
@@ -1,5 +1,9 @@
 bin_PROGRAMS=uhuru-daemon
 
-uhuru_daemon_CFLAGS=-I$(top_srcdir)/include
+uhuru_daemon_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src/lib
 uhuru_daemon_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ -lmagic
-uhuru_daemon_SOURCES=main.c
+uhuru_daemon_SOURCES= \
+main.c \
+poll.c \
+poll.h
+
