--- a/libumwsu/src/daemon/Makefile.am
+++ b/libumwsu/src/daemon/Makefile.am
@@ -4,6 +4,8 @@ uhuru_daemon_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GMODULE2_CFLAGS
 uhuru_daemon_LDADD=$(top_builddir)/src/lib/libumwsu.la @GMODULE2_LIBS@ -lmagic
 uhuru_daemon_SOURCES= \
 main.c \
+client.c \
+client.h \
 server.c \
 server.h
 
