--- a/modules/clamav/conf/clamav.conf
+++ b/modules/clamav/conf/clamav.conf
@@ -1,4 +1,10 @@
+#
+# Uhuru Clamav scan module configuration
+#
 [clamav]
 
-db=/var/lib/uhuru/db/clamav/unsupported # directory
-db=/var/lib/uhuru/db/clamav/oiv.db  # db
+# additional signatures databases directory
+#db=/var/lib/uhuru/db/clamav/unsupported
+
+# additional signatures database
+#db=/var/lib/uhuru/db/clamav/oiv.db
