--- a/libumwsu/conf/quarantine.conf.in
+++ b/libumwsu/conf/quarantine.conf.in
@@ -1,3 +1,14 @@
+#
+# Uhuru quarantine configuration
+#
 [quarantine]
+
+# is quarantine enabled?
 enabled=0
+
+# quarantine directory
+# files containing malware will be moved to this directory, renamed and made 
+# non-readable
+# quarantine directory must be mode 333 octal. This is normaly managed by 
+# package installation scripts
 quarantine-dir=@localstatedir@/lib/uhuru/quarantine
