--- a/libuhuru/src/inotifyd/src/Makefile.am
+++ b/libuhuru/src/inotifyd/src/Makefile.am
@@ -1,9 +1,9 @@
-sbin_PROGRAMS=umwsu-daemon
+sbin_PROGRAMS=uhuru-daemon
 
-umwsu_daemon_SOURCES=umwsu-daemon.c
-umwsu_daemon_CFLAGS=
-umwsu_daemon_LDADD=
-umwsu_daemon_CFLAGS+= @LIBUMWSU_CFLAGS@
-umwsu_daemon_LDADD+= @LIBUMWSU_LIBS@
-umwsu_daemon_CFLAGS+= @GLIB2_CFLAGS@
-umwsu_daemon_LDADD+= @GLIB2_LIBS@
+uhuru_daemon_SOURCES=uhuru-daemon.c
+uhuru_daemon_CFLAGS=
+uhuru_daemon_LDADD=
+uhuru_daemon_CFLAGS+= @LIBUHURU_CFLAGS@
+uhuru_daemon_LDADD+= @LIBUHURU_LIBS@
+uhuru_daemon_CFLAGS+= @GLIB2_CFLAGS@
+uhuru_daemon_LDADD+= @GLIB2_LIBS@
