--- a/libuhuru/src/scand/Makefile.am
+++ b/libuhuru/src/scand/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS=uhuru-scan-daemon
 
 uhuru_scan_daemon_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GMODULE2_CFLAGS@ @GIO2_CFLAGS@
-uhuru_scan_daemon_LDADD=$(top_builddir)/src/lib/libumwsu.la @GMODULE2_LIBS@ @GIO2_LIBS@ -lmagic
+uhuru_scan_daemon_LDADD=$(top_builddir)/src/lib/libuhuru.la @GMODULE2_LIBS@ @GIO2_LIBS@ -lmagic
 uhuru_scan_daemon_SOURCES= \
 main.c \
 client.c \
