--- a/libuhuru/conf/Makefile.am
+++ b/libuhuru/conf/Makefile.am
@@ -1,5 +1,5 @@
-umwsuconfdir=$(sysconfdir)/umwsu/conf.d
-umwsuconf_DATA=umwsu.conf alert.conf quarantine.conf remote.conf
+uhuruconfdir=$(sysconfdir)/uhuru/conf.d
+uhuruconf_DATA=uhuru.conf alert.conf quarantine.conf remote.conf
 
 EDIT = sed \
         -e 's,@sysconfdir\@,$(sysconfdir),g' \
@@ -10,4 +10,4 @@ EDIT = sed \
 	$(EDIT) $(srcdir)/$*.conf.in >$*.conf.tmp
 	mv $*.conf.tmp $*.conf
 
-EXTRA_DIST=umwsu.conf.in alert.conf.in quarantine.conf.in remote.conf.in
+EXTRA_DIST=uhuru.conf.in alert.conf.in quarantine.conf.in remote.conf.in
