renaming in progress

--- a/modules/clamav/conf/Makefile.am
+++ b/modules/clamav/conf/Makefile.am
@@ -1,4 +1,4 @@
-umwsuconfdir=$(sysconfdir)/umwsu/conf.d
-umwsuconf_DATA=clamav.conf
+uhuruconfdir=$(sysconfdir)/uhuru/conf.d
+uhuruconf_DATA=clamav.conf
 
 EXTRA_DIST=clamav.conf
